# lamplight

./: .env.example  .fcignore  .gitignore  CHANGELOG.md  DEMO.md  README.md  memory_bench.py  pyproject.toml  seed.py
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  codeql.yml  pages.yml
api/: main.py
bench_results/: RESULTS.md  summary.json
docs/: ARCHITECTURE.md  friction-log.md
docs/proof/: DEPLOY_PROOF.md
examples/: support_handover.py
fixtures/ward_5day/: ground_truth.json
fixtures/ward_5day/expected/: brief_bed9_shift15.json
fixtures/ward_5day/extraction/shift_01/: bed_03.json  bed_05.json  bed_07.json  bed_09.json  bed_11.json  bed_12.json
fixtures/ward_5day/extraction/shift_02/: bed_03.json  bed_05.json  bed_07.json  bed_09.json  bed_11.json  bed_12.json
fixtures/ward_5day/extraction/shift_03/: bed_03.json  bed_05.json  bed_07.json  bed_09.json  bed_11.json  bed_12.json
fixtures/ward_5day/extraction/shift_04/: bed_03.json  bed_05.json  bed_07.json  bed_09.json  bed_11.json  bed_12.json
fixtures/ward_5day/extraction/shift_05/: bed_03.json  bed_05.json  bed_07.json  bed_09.json  bed_11.json  bed_12.json
fixtures/ward_5day/extraction/shift_06/: bed_03.json  bed_05.json  bed_07.json  bed_09.json  bed_11.json  bed_12.json
fixtures/ward_5day/extraction/shift_07/: bed_03.json  bed_05.json  bed_07.json  bed_09.json  bed_11.json  bed_12.json
fixtures/ward_5day/extraction/shift_08/: bed_03.json  bed_05.json  bed_07.json  bed_09.json  bed_11.json  bed_12.json
fixtures/ward_5day/extraction/shift_09/: bed_03.json  bed_05.json  bed_07.json  bed_09.json  bed_11.json  bed_12.json
fixtures/ward_5day/extraction/shift_10/: bed_03.json  bed_05.json  bed_07.json  bed_09.json  bed_11.json  bed_12.json
fixtures/ward_5day/extraction/shift_11/: bed_03.json  bed_05.json  bed_07.json  bed_09.json  bed_11.json  bed_12.json
fixtures/ward_5day/extraction/shift_12/: bed_03.json  bed_05.json  bed_07.json  bed_09.json  bed_11.json  bed_12.json
fixtures/ward_5day/extraction/shift_13/: bed_03.json  bed_05.json  bed_07.json  bed_09.json  bed_11.json  bed_12.json
fixtures/ward_5day/extraction/shift_14/: bed_03.json  bed_05.json  (+4 more)
infra/fc/: PROOF.md  s.yaml  wsgi.py
scripts/: check_submission_readiness.py  verify_offline.py
seed_data/: __init__.py  ward.py
site/: CNAME  index.html
site/pitch/: index.html
src/lamplight_memory/: __init__.py  bench.py  brief.py  chain.py  cli.py  clock.py  consolidate.py  contradiction.py  decay.py  engine.py  packer.py  paths.py  pricing.py  replay.py  schemas.py  sealed.py  store.py  tokens.py  util.py  validator.py
src/lamplight_memory/transport/: __init__.py  base.py  fake.py  live.py
tests/: conftest.py  test_bench.py  test_brief.py  test_chain.py  test_cli.py  test_clock.py  test_consolidate.py  test_contradiction.py  test_decay.py  test_engine.py  test_invariants.py  test_live_transport.py  test_packer.py  test_paths.py  test_pricing.py  test_replay.py  test_schemas.py  test_sealed.py  test_store.py  test_tokens.py  test_transport.py  test_util.py  test_validator.py
web/: brief.html  render_brief.py
(+96 files in other folders)
