[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lamplight-memory"
version = "1.0.0"
description = "Domain-agnostic shift-handover memory engine: episodic store, decay classes, consolidation, token-budget briefs with mechanical citation validation, and a signed hash-chained op ledger."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [{ name = "Edy Cu" }]
keywords = ["memory", "agent", "decay", "handover", "qwen", "audit"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "pydantic>=2.7",
  "pynacl>=1.5",
  "typer>=0.16",
  "openai>=1.40",   # LiveQwen transport only; never called in offline mode
  "httpx>=0.27",    # LiveQwen rerank endpoint only
]

[project.optional-dependencies]
release = ["python-semantic-release>=9,<10"]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "fastapi>=0.111",
  "uvicorn>=0.30",
  "ruff>=0.6",
  "mypy>=1.11",
]
api = [
  "fastapi>=0.111",
  "uvicorn>=0.30",
]

[project.scripts]
lamplight = "lamplight_memory.cli:app"

[project.urls]
Homepage = "https://github.com/edycu/lamplight"

[tool.hatch.build.targets.wheel]
packages = ["src/lamplight_memory"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [".venv", "bench_results", "seed_data", "web"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# B008: typer's Argument()/Option() defaults are the documented idiom, not a bug.
# B905: zip(..., strict=) is a 3.10+ nicety; not required for the fixed-length
#       pairings used here (episode/embedding rows built together).
ignore = ["B008", "B905"]

[tool.ruff.lint.per-file-ignores]
# Test literals (clinical note strings, expected-value assertions) run long;
# readability > wrapping in test bodies.
"tests/*" = ["E501"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
exclude = ["tests/", "bench_results/", "seed_data/", "\\.venv/"]

# ---------------------------------------------------------------------------
# Automatic semantic versioning, driven by Conventional Commits in THIS repo.
# This build/ folder is its own isolated git repo (no remote, not the monorepo).
#   fix:  -> patch   feat: -> minor   feat!/BREAKING CHANGE: -> major
# Bump locally with:  ./.venv/bin/semantic-release version
# (config is local-only: it commits + tags in this repo but never pushes.)
# ---------------------------------------------------------------------------
[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
version_variables = ["src/lamplight_memory/__init__.py:__version__"]
tag_format = "v{version}"
commit_message = "chore(release): {version} [skip ci]"
allow_zero_version = true
major_on_zero = false
build_command = ""

[tool.semantic_release.branches.main]
match = "(main|master)"

[tool.semantic_release.publish]
upload_to_vcs_release = false
